[FIX] Make cells right aligned

--- a/web_widget_x2many_2d_matrix/static/src/scss/web_widget_x2many_2d_matrix.scss
+++ b/web_widget_x2many_2d_matrix/static/src/scss/web_widget_x2many_2d_matrix.scss
@@ -29,7 +29,7 @@ $x2many_2d_matrix_max_height: 450px;
                 }
 
                 > td {
-                    text-align: left;
+                    text-align: right;
 
                     &:first-child {
                         position: sticky;
